--- a/react/package.json
+++ b/react/package.json
@@ -37,13 +37,14 @@
     "@storybook/react": "^7.2.1",
     "@storybook/test-runner": "^0.13.0",
     "@storybook/testing-library": "^0.2.0",
-    "@testing-library/jest-dom": "^6.0.0",
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.3",
     "concurrently": "^8.2.0",
     "eslint-plugin-storybook": "^0.6.13",
     "http-server": "^14.1.1",
     "i": "^0.3.7",
-    "jest": "^29.6.2",
+    "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.6.2",
     "jest-mock": "^29.6.2",
     "next-router-mock": "^0.9.9",
