--- a/react/package.json
+++ b/react/package.json
@@ -13,6 +13,7 @@
     "test-storybook": "test-storybook"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.1",
     "@types/node": "20.4.7",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
