--- a/react/package.json
+++ b/react/package.json
@@ -19,6 +19,7 @@
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
     "clsx": "^2.1.0",
+    "date-fns": "^3.3.1",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "next": "13.4.12",
