--- a/react/package.json
+++ b/react/package.json
@@ -43,6 +43,7 @@
     "@storybook/test-runner": "^0.13.0",
     "@storybook/testing-library": "^0.2.0",
     "@testing-library/jest-dom": "^6.0.0",
+    "@testing-library/react": "^14.1.2",
     "@types/jest": "^29.5.3",
     "concurrently": "^8.2.0",
     "eslint-plugin-storybook": "^0.6.13",
