--- a/react/package.json
+++ b/react/package.json
@@ -15,6 +15,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
     "@types/node": "20.4.7",
     "@types/react": "18.2.18",
