--- a/react/package.json
+++ b/react/package.json
@@ -1,18 +1,23 @@
 {
   "name": "coding-assessment-react",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest",
+    "test": "jest --verbose=true",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "test-storybook": "test-storybook"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
+    "@shopify/polaris": "^12.10.0",
+    "@shopify/polaris-icons": "^8.0.0",
+    "@shopify/react-testing": "^5.1.3",
+    "@testing-library/user-event": "^14.5.2",
     "@types/node": "20.4.7",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
@@ -23,8 +28,11 @@
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.49.3",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "validator": "^13.11.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@jest/globals": "^29.6.2",
@@ -32,13 +40,16 @@
     "@storybook/addon-interactions": "^7.2.1",
     "@storybook/addon-links": "^7.2.1",
     "@storybook/addon-onboarding": "^1.0.8",
+    "@storybook/addon-styling-webpack": "^0.0.6",
     "@storybook/blocks": "^7.2.1",
     "@storybook/nextjs": "^7.2.1",
     "@storybook/react": "^7.2.1",
     "@storybook/test-runner": "^0.13.0",
     "@storybook/testing-library": "^0.2.0",
     "@testing-library/jest-dom": "^6.0.0",
+    "@testing-library/react": "^14.1.2",
     "@types/jest": "^29.5.3",
+    "@types/validator": "^13.11.8",
     "concurrently": "^8.2.0",
     "eslint-plugin-storybook": "^0.6.13",
     "http-server": "^14.1.1",
@@ -49,7 +60,8 @@
     "next-router-mock": "^0.9.9",
     "storybook": "^7.2.1",
     "storybook-test": "^0.1.8",
-    "ts-jest": "^29.1.1"
+    "ts-jest": "^29.1.1",
+    "tsconfig-paths-webpack-plugin": "^4.1.0"
   },
   "packageManager": "yarn@3.6.1"
 }
